--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -12,6 +12,14 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+  @include respond(phone) {
+    font-size: 56.25%; //1rem = 9px
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; //1rem = 12px
+  }
 }
 
 .big-title {
@@ -23,14 +31,10 @@ html {
 }
 
 .medium-title {
-  font-size: 4.8rem;
+  font-size: 4rem;
   font-weight: 400;
   font-family: font-display;
   color: white;
-
-  /* &--secondary {
-    background-color: $color-secondary;
-  } */
 }
 
 .small-title {
