--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -61,4 +61,191 @@
       width: 35rem;
     }
   }
+
+  &__music {
+    margin-top: 6rem;
+  }
+}
+
+.staff {
+  display: block;
+  position: relative;
+  z-index: 0;
+  border-bottom: 3px solid #e0e0e0;
+  margin-bottom: 5rem;
+}
+
+.git-staff {
+  display: block;
+  position: absolute;
+  z-index: 10;
+  height: 2px;
+
+  border-bottom: 3px solid #828282;
+
+  &--1 {
+    width: 100%;
+  }
+
+  /* &--2 {
+    width: 10rem;
+    left: 23.3rem;
+  } */
+
+  /* &--curve1 {
+    display: block;
+    position: absolute;
+
+    width: 4.1rem;
+    height: 3rem;
+    left: 19rem;
+    top: -2.7rem;
+
+    border: solid 3px #828282;
+    border-color: transparent #828282 #828282 transparent;
+    border-radius: 0 0 1rem 0;
+  }
+
+  &--curve2 {
+    display: block;
+    position: absolute;
+
+    width: 3.8rem;
+    height: 3rem;
+    left: 22.8rem;
+    top: -3.8rem;
+
+    border: solid 3px #828282;
+    border-color: #828282 transparent transparent #828282;
+    border-radius: 1rem 0 0 0;
+  } */
+}
+
+.note {
+  position: absolute;
+  display: block;
+  z-index: 100;
+  height: 5.6rem;
+  top: -5.6rem;
+
+  &--primary {
+    border-right: 5px solid $color-primary;
+    background-color: $color-primary;
+  }
+
+  &--secondary {
+    border-right: 5px solid $color-secondary;
+    background-color: $color-secondary;
+  }
+
+  &--tertiary {
+    border-right: 5px solid $color-tertiary;
+    background-color: $color-tertiary;
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 200;
+    width: 4rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    background-color: inherit;
+    top: 4rem;
+    left: -3.6rem;
+  }
+
+  &--1 {
+    left: 6rem;
+  }
+
+  &--2 {
+    left: 15rem;
+    @include croche;
+  }
+
+  &--3 {
+    left: 24rem;
+  }
+
+  &--4 {
+    left: 33rem;
+  }
+
+  &--5 {
+    left: 42rem;
+
+    &.note--tertiary {
+      @include croche;
+    }
+  }
+
+  &--6 {
+    left: 51rem;
+    @include croche;
+  }
+
+  &--7 {
+    left: 60rem;
+  }
+
+  &--8 {
+    left: 69rem;
+  }
+
+  &--9 {
+    left: 78rem;
+  }
+
+  &--10 {
+    left: 87rem;
+  }
+
+  &--11 {
+    left: 96rem;
+    @include croche;
+  }
+
+  &--12 {
+    left: 105rem;
+  }
+
+  &--13 {
+    left: 114rem;
+  }
+
+  &--14 {
+    left: 123rem;
+    &.note--tertiary {
+      @include croche;
+    }
+  }
+
+  &--15 {
+    left: 132rem;
+
+    @include croche;
+  }
+
+  &--16 {
+    left: 141rem;
+  }
+
+  &--17 {
+    left: 150rem;
+  }
+
+  &--18 {
+    left: 159rem;
+  }
+}
+
+.double-croche {
+  display: block;
+  position: absolute;
+  border-bottom: solid 5px $color-tertiary;
+  top: 1rem;
+  width: 9rem;
+  height: 5px;
 }
