--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -34,8 +34,13 @@
     display: block;
     position: absolute;
     z-index: 100;
-    width: 9rem;
+    width: 7rem;
     height: 6px;
     background-color: inherit;
+
+    @include respond(phone) {
+      height: 2.5px;
+      width: 3rem;
+    }
   }
 }
