--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -46,6 +46,7 @@
 }
 
 .header-bottom {
+  overflow: hidden;
   &__title-container {
     background-color: $color-secondary;
     height: 8rem;
@@ -73,6 +74,10 @@
   z-index: 0;
   border-bottom: 3px solid #e0e0e0;
   margin-bottom: 5rem;
+
+  @include respond(phone) {
+    margin-bottom: 2rem;
+  }
 }
 
 .git-staff {
@@ -124,120 +129,240 @@
 .note {
   position: absolute;
   display: block;
-  z-index: 100;
+  z-index: 10;
   height: 5.6rem;
   top: -5.6rem;
+
+  @include respond(phone) {
+    height: 2.5rem;
+    top: -2.5rem;
+  }
 
   &--primary {
     border-right: 5px solid $color-primary;
     background-color: $color-primary;
+
+    @include respond(phone) {
+      border-right: 3px solid $color-primary;
+    }
   }
 
   &--secondary {
     border-right: 5px solid $color-secondary;
     background-color: $color-secondary;
+
+    @include respond(phone) {
+      border-right: 3px solid $color-secondary;
+    }
   }
 
   &--tertiary {
     border-right: 5px solid $color-tertiary;
     background-color: $color-tertiary;
+
+    @include respond(phone) {
+      border-right: 3px solid $color-tertiary;
+    }
   }
 
   &::before {
     content: '';
     display: block;
     position: absolute;
-    z-index: 200;
+    z-index: 30;
     width: 4rem;
     height: 3.5rem;
     border-radius: 50%;
     background-color: inherit;
     top: 4rem;
     left: -3.6rem;
+
+    @include respond(phone) {
+      width: 2rem;
+      height: 1.5rem;
+      top: 2rem;
+      left: -1.7rem;
+    }
   }
 
   &--1 {
     left: 6rem;
+
+    @include respond(phone) {
+      left: 4rem;
+    }
   }
 
   &--2 {
     left: 15rem;
     @include croche;
+
+    @include respond(phone) {
+      left: 8rem;
+    }
   }
 
   &--3 {
-    left: 24rem;
+    left: 22rem;
+
+    @include respond(phone) {
+      left: 11rem;
+    }
   }
 
   &--4 {
-    left: 33rem;
+    left: 31rem;
+
+    @include respond(phone) {
+      left: 15rem;
+    }
   }
 
   &--5 {
-    left: 42rem;
+    left: 40rem;
 
     &.note--tertiary {
       @include croche;
+    }
+
+    @include respond(phone) {
+      left: 19rem;
     }
   }
 
   &--6 {
-    left: 51rem;
+    left: 47rem;
     @include croche;
+
+    @include respond(phone) {
+      left: 22rem;
+    }
   }
 
   &--7 {
-    left: 60rem;
+    left: 54rem;
+
+    @include respond(phone) {
+      left: 25rem;
+    }
   }
 
   &--8 {
-    left: 69rem;
+    left: 63rem;
+
+    @include respond(phone) {
+      left: 29rem;
+    }
   }
 
   &--9 {
-    left: 78rem;
+    left: 72rem;
+
+    @include respond(phone) {
+      left: 33rem;
+    }
   }
 
   &--10 {
-    left: 87rem;
+    left: 81rem;
+
+    @include respond(phone) {
+      left: 37rem;
+    }
   }
 
   &--11 {
-    left: 96rem;
+    left: 90rem;
     @include croche;
+
+    @include respond(phone) {
+      left: 41rem;
+    }
   }
 
   &--12 {
-    left: 105rem;
+    left: 97rem;
+
+    @include respond(phone) {
+      left: 44rem;
+    }
   }
 
   &--13 {
-    left: 114rem;
+    left: 106rem;
+
+    @include respond(phone) {
+      left: 48rem;
+    }
   }
 
   &--14 {
-    left: 123rem;
+    left: 115rem;
     &.note--tertiary {
       @include croche;
+    }
+
+    @include respond(phone) {
+      left: 52rem;
     }
   }
 
   &--15 {
-    left: 132rem;
-
+    left: 122rem;
     @include croche;
+
+    @include respond(phone) {
+      left: 55rem;
+    }
   }
 
   &--16 {
-    left: 141rem;
+    left: 129rem;
+
+    @include respond(phone) {
+      left: 58rem;
+    }
   }
 
   &--17 {
-    left: 150rem;
+    left: 138rem;
+
+    @include respond(phone) {
+      left: 62rem;
+    }
   }
 
   &--18 {
-    left: 159rem;
+    left: 147rem;
+
+    @include respond(phone) {
+      left: 66rem;
+    }
+  }
+
+  &--19 {
+    left: 156rem;
+    @include croche;
+
+    @include respond(phone) {
+      left: 70rem;
+    }
+  }
+
+  &--20 {
+    left: 163rem;
+
+    @include respond(phone) {
+      left: 73rem;
+    }
+  }
+
+  &--21 {
+    left: 172rem;
+
+    @include respond(phone) {
+      left: 77rem;
+    }
   }
 }
 
@@ -246,6 +371,12 @@
   position: absolute;
   border-bottom: solid 5px $color-tertiary;
   top: 1rem;
-  width: 9rem;
+  width: 7rem;
   height: 5px;
+
+  @include respond(phone) {
+    height: 2.5px;
+    border-bottom: solid 2.5px $color-tertiary;
+    width: 3rem;
+  }
 }
