--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,5 +3,6 @@
 @import 'utilities';
 @import 'base';
 
+@import './components/about';
 @import './components/header';
 @import './components/navbar';
