--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -35,10 +35,17 @@
       grid-column: 1 / 2;
     }
   }
+
   &__skills {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     padding-left: 10rem;
+
+    &__title {
+      padding-left: 2rem;
+      color: $text-color;
+      grid-column: 2 / 3;
+    }
 
     @include respond(tab-port) {
       grid-row: 2 / 3;
@@ -48,11 +55,16 @@
   }
 
   &__education {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+
     @include respond(tab-port) {
       grid-row: 3 / 4;
       grid-column: 1 / 2;
     }
   }
+
   &__experience {
     padding-left: 10rem;
 
@@ -61,5 +73,32 @@
       grid-column: 1 / 2;
       padding-left: 0;
     }
+  }
+
+  &__list {
+    font-size: 2.5rem;
+    font-weight: 400;
+    font-family: font-display;
+    color: $color-primary;
+
+    @include respond(phone) {
+      font-size: 2rem;
+    }
+  }
+
+  &__degree {
+    padding-left: 2rem;
+  }
+
+  &__date {
+    padding-right: 2rem;
+  }
+}
+
+.education {
+  &__left {
+  }
+  &__right {
+    border-left: solid 3px $color-grey;
   }
 }
