--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -79,7 +79,7 @@
   z-index: 10;
   height: 2px;
 
-  border-bottom: 3px solid #828282;
+  border-bottom: 3px solid $color-grey;
 
   &--1 {
     width: 100%;
