--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,10 +1,15 @@
 .about {
   display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 60rem 1fr;
-  justify-content: space-between;
-  align-items: center;
+  grid-template-rows: repeat(2, min-content);
+  grid-template-columns: 55% 1fr;
+  align-items: end;
+  row-gap: 10rem;
   margin-top: 7rem;
+  margin-bottom: 10rem; /******TO REMOVE*******/
+
+  @include respond(tab-land) {
+    row-gap: 5rem;
+  }
 
   @include respond(tab-port) {
     grid-template-rows: repeat(4, auto);
@@ -36,16 +41,30 @@
     }
   }
 
+  &__title {
+    padding-left: 2rem;
+    color: $text-color;
+    grid-column: 2 / 3;
+  }
+
+  &__content {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    grid-template-rows: min-content;
+
+    font-size: 2.5rem;
+    font-weight: 400;
+    font-family: font-display;
+
+    @include respond(phone) {
+      font-size: 2rem;
+    }
+  }
+
   &__skills {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    padding-left: 10rem;
-
-    &__title {
-      padding-left: 2rem;
-      color: $text-color;
-      grid-column: 2 / 3;
-    }
+    padding-left: 20rem;
 
     @include respond(tab-port) {
       grid-row: 2 / 3;
@@ -55,9 +74,11 @@
   }
 
   &__education {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    transform: translateX(-8rem);
+
+    @include respond(tab-land) {
+      transform: translateX(0);
+    }
 
     @include respond(tab-port) {
       grid-row: 3 / 4;
@@ -66,8 +87,6 @@
   }
 
   &__experience {
-    padding-left: 10rem;
-
     @include respond(tab-port) {
       grid-row: 4 / 5;
       grid-column: 1 / 2;
@@ -76,29 +95,24 @@
   }
 
   &__list {
-    font-size: 2.5rem;
-    font-weight: 400;
-    font-family: font-display;
-    color: $color-primary;
-
-    @include respond(phone) {
-      font-size: 2rem;
-    }
+    list-style: none;
+    color: $text-color;
+    font-family: $font-text;
+    font-size: 1.8rem;
   }
 
-  &__degree {
+  &__item {
+    color: $color-primary;
+    display: inline-block;
     padding-left: 2rem;
+    padding-top: 1rem;
+    font-weight: 300;
   }
 
   &__date {
     padding-right: 2rem;
-  }
-}
-
-.education {
-  &__left {
-  }
-  &__right {
-    border-left: solid 3px $color-grey;
+    color: $color-primary;
+    padding-top: 1rem;
+    font-weight: 300;
   }
 }
