--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -12,6 +12,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 
   @include respond(phone) {
     font-size: 56.25%; //1rem = 9px
