--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -42,8 +42,14 @@
 
   &__title {
     padding-left: 2rem;
+    padding-top: 2rem;
     color: $text-color;
     grid-column: 2 / 3;
+  }
+
+  &__feat {
+    color: $color-secondary;
+    font-size: 2.5rem;
   }
 
   &__content {
@@ -132,5 +138,15 @@
     color: $color-primary;
     padding-top: 1rem;
     font-weight: 300;
+  }
+
+  &__education,
+  &__experience {
+    &::before {
+      content: 'Feature:';
+      color: $color-secondary;
+      font-size: 2.5rem;
+      transform: translate(10.8rem, -0.5rem);
+    }
   }
 }
