--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'base';
 
 @import './components/about';
+@import './components/footer';
 @import './components/header';
 @import './components/navbar';
 @import './components/scrollbutton';
