--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -12,6 +12,12 @@
     font-weight: 400;
     font-size: 3.6rem;
     flex: 1 0 auto;
+
+    & > a {
+      color: inherit;
+      text-decoration: none;
+      margin: 1rem 2rem;
+    }
   }
 
   &__list {
@@ -22,8 +28,9 @@
   }
 
   &__link {
-    color: inherit;
+    color: $color-primary;
     text-decoration: none;
-    padding: 0 2rem;
+    margin: 1rem 2rem;
+    position: relative;
   }
 }
