design and accessibility fixes

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -7,13 +7,14 @@
   grid-template-rows: 35rem 1fr;
   grid-template-columns: 55% 45%;
   align-items: start;
-  margin: 7rem 5rem 7rem 14rem;
+  margin-top: 7rem;
+  margin-right: 5rem;
+  margin-bottom: 7rem;
 
   @include respond(tab-port) {
     grid-template-rows: repeat(4, min-content);
     grid-template-columns: 95vw;
     row-gap: 10rem;
-    margin: 5rem;
   }
 
   @include respond(phone) {
@@ -28,6 +29,9 @@
     align-items: center;
     width: max-content;
     padding-right: 5rem;
+
+    animation: moveInLeft 0.5s ease-out 0.75s;
+    animation-fill-mode: backwards;
   }
 
   &__text {
@@ -36,7 +40,7 @@
     color: $text-color;
 
     @include respond(tab-port) {
-      margin-right: 5rem;
+      margin-right: 2rem;
     }
   }
 
@@ -146,7 +150,7 @@
       content: 'Feature:';
       color: $color-secondary;
       font-size: 2.5rem;
-      transform: translate(10.8rem, -0.5rem);
+      transform: translate(10.6rem, -0.5rem);
     }
   }
 }
