--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -27,7 +27,7 @@
     font-size: 1.6rem;
   }
 
-  &__link {
+  &__item {
     color: $color-primary;
     text-decoration: none;
     margin: 1rem 2rem;
