--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   border-top: solid $color-primary 1px;
   color: $text-color;
+
   display: flex;
   align-items: baseline;
 
@@ -9,14 +10,19 @@
   }
 
   &__title {
-    padding-left: 2rem;
     color: $color-primary;
     font-weight: 300;
     font-size: 6rem;
     margin-bottom: 10rem;
+
+    @include respond(tab-port) {
+      padding-left: 0;
+      margin-bottom: 5rem;
+    }
   }
 
   &__list {
+    font-family: $font-text;
     padding-left: 2rem;
     text-decoration: none;
     list-style: none;
@@ -24,9 +30,27 @@
     margin-bottom: 10rem;
     margin-left: 8rem;
 
+    @include respond(tab-port) {
+      margin-left: 16rem;
+      margin-bottom: 8rem;
+    }
+
+    @include respond(phone) {
+      margin-left: 10rem;
+      margin-bottom: 5rem;
+    }
+
+    & > li {
+      padding: 0.4rem;
+    }
+
     & > li:first-child {
       margin-bottom: 5rem;
       color: $text-color;
+    }
+
+    & > li > a {
+      position: relative;
     }
   }
 }
