--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,58 +3,32 @@
   justify-content: space-between;
   align-items: center;
 
-  &__greeting {
-    width: 60rem;
-    margin-right: 5rem;
-    color: $text-color;
-  }
-
   &__link {
-    color: inherit;
-    text-decoration: none;
-    color: $color-tertiary;
-    font-weight: 500;
+    font-weight: 400;
     position: relative;
-  }
-
-  &__yt {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-basis: 75rem;
-    height: 30rem;
-    max-width: 35%;
-    min-width: 40rem;
-    background-color: $color-primary;
-    color: white;
-
-    @include respond(tab-port) {
-      display: none;
-    }
-
-    & > p {
-      font-weight: 400;
-      font-size: 1.8rem;
-      font-family: $font-text;
-    }
-  }
-
-  &__button {
-    margin-top: 2rem;
-    background-color: white;
     color: $color-primary;
-    text-transform: uppercase;
-    border: none;
-    padding: 2rem 4rem;
-    font-weight: 500;
-    font-size: 2.4rem;
-    cursor: pointer;
+  }
+
+  & > p {
+    font-weight: 400;
+    font-size: 1.8rem;
+    font-family: $font-text;
+  }
+}
+
+.greeting {
+  width: 60rem;
+  margin-right: 5rem;
+  color: $text-color;
+  &__text {
+    animation: moveInLeft 0.5s ease-out 0.75s;
+    animation-fill-mode: backwards;
   }
 }
 
 .header-bottom {
   overflow: hidden;
+
   &__title-container {
     background-color: $color-secondary;
     height: 8rem;
@@ -62,6 +36,9 @@
     align-items: center;
     width: max-content;
     padding-right: 5rem;
+
+    animation: moveInLeft 0.5s ease-out 0.75s;
+    animation-fill-mode: backwards;
   }
 
   &__music {
@@ -70,6 +47,8 @@
 
   &__score-wrapper {
     width: 100vw;
+    animation: moveInRight 0.5s ease-out 0.75s;
+    animation-fill-mode: backwards;
 
     > img {
       margin-top: 7rem;
