--- a/src/sass/components/_apibox.scss
+++ b/src/sass/components/_apibox.scss
@@ -1,4 +1,5 @@
 .apibox {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,6 +10,7 @@
   min-width: 40rem;
   background-color: $color-primary;
   color: white;
+  transition: background-color 0.2s ease;
   animation: moveInRight 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
 
@@ -18,7 +20,7 @@
 
   &__button {
     margin-top: 2rem;
-
+    border: none;
     color: $color-primary;
     text-transform: uppercase;
     border: none;
@@ -39,6 +41,47 @@
     &:hover {
       background-position: 100%;
       color: white;
+    }
+  }
+
+  &.transparent {
+    background-color: transparent;
+
+    & > button.apibox__button {
+      color: white;
+    }
+  }
+}
+
+.cat-img {
+  animation: moveInRight 0.5s ease-out 0.75s;
+  position: absolute;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.delete {
+  z-index: 10;
+  position: absolute;
+  top: -0.5rem;
+  right: 1rem;
+  border: none;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+
+  &--sign {
+    &::after {
+      content: '\00d7';
+      color: $color-secondary;
+      background-color: white;
+      display: inline-block;
+      font-size: 5rem;
+      position: absolute;
+      right: -1rem;
+      width: 5rem;
+      top: -1rem;
     }
   }
 }
