--- a/src/sass/components/_apibox.scss
+++ b/src/sass/components/_apibox.scss
@@ -24,6 +24,7 @@
     color: $color-primary;
     text-transform: uppercase;
     border: none;
+    outline: none;
     padding: 2rem 4rem;
     font-weight: 500;
     font-size: 2.4rem;
